[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "~1.5.3"
fastapi = "~0.95.0"
uvicorn = {version = "~0.21.1", extras = ["standard"]}


[tool.poetry.group.dev.dependencies]
pytest = "~7.2.2"
flake8 = "6.0.0"
black = "~23.3.0"
httpx = "~0.23.3"
pytest-mock = "3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
